Fixed the WPMU bug in the registration phase. blog_id is now blogname in WPMU 2.6
git-svn-id: http://svn.wp-plugins.org/wp-recaptcha/trunk@72942 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/recaptcha.css
+++ b/recaptcha.css
@@ -22,6 +22,7 @@
    font-weight: bolder;
    text-decoration: none;
    border: 0;
+   background-color: transparent !important;
 }
 
 /* This is for hyperlinked emails i.e. <a href="mailto:ohnoes@pwnies.com">TEXT</a> - TEXT*/
